Set version of the package in VERSION file

--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ model:
 
 training:
   save_model: True
-  run_validation: False
+  run_validation: True
   use_holdout: False
   metrics:
     - accuracy
