--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/requirements.txt -r requirements/requirements-dev.txt
       - name: Run black
-        run: black --check .
+        run: black --check --line-length 119 spam_classifier tests
       - name: Run flake8
-        run: flake8
+        run: flake8 --max-line-length 119 spam_classifier tests
       - name: Run mypy
         run: mypy spam_classifier tests
       - name: Run tests
