--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/requirements.txt -r requirements/requirements-dev.txt
+      - name: Sort imports
+        run: isort --profile black --line-length 119 spam_classifier tests
       - name: Run black
         run: black --check --line-length 119 spam_classifier tests
       - name: Run flake8
         run: flake8 --max-line-length 119 spam_classifier tests
       - name: Run mypy
-        run: mypy spam_classifier tests
+        run: mypy spam_classifier
       - name: Run tests
         run: pytest tests
