--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -1,9 +1,9 @@
 # Дополнительные зависимости для разработки
-pytest>=6.0.0
-pytest-cov>=2.0.0
-black>=22.0.0
-mypy>=0.900
-flake8>=3.9.0
-pre-commit>=3.0.0
-types-PyYAML>=6.0.0
-isort>=7.0.0
+pytest==9.0.2
+pytest-cov==7.0.0
+black==26.1.0
+mypy==1.19.1
+flake8==7.3.0
+pre-commit==4.5.1
+types-PyYAML==6.0.12.20250915
+isort==7.0.0
