--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,7 +1,7 @@
 # Основные зависимости
-pydantic>=2.0
-scikit-learn>=1.0.0
-pandas>=1.0.0
-nltk>=3.0.0
-pyyaml>=5.0.0
-joblib>=1.0.0
+pydantic==2.12.5
+scikit-learn==1.8.0
+pandas==3.0.0
+nltk==3.9.2
+pyyaml==6.0.3
+joblib==1.5.3
