--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,25 +9,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v3
+      - name: Create venv
+        run: uv venv --python ${{ matrix.python-version }}
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/requirements.txt -r requirements/requirements-dev.txt
+        run: uv pip install -e ".[dev]"
       - name: Sort imports
-        run: isort --profile black --line-length 119 spam_classifier tests
+        run: uv run isort --profile black --line-length 119 spam_classifier tests
       - name: Run black
-        run: black --check --line-length 119 spam_classifier tests
+        run: uv run black --check --line-length 119 spam_classifier tests
       - name: Run flake8
-        run: flake8 --max-line-length 119 spam_classifier tests
+        run: uv run flake8 --max-line-length 119 spam_classifier tests
       - name: Run mypy
-        run: mypy spam_classifier
+        run: uv run mypy spam_classifier
       - name: Run tests
-        run: pytest tests
+        run: uv run pytest tests
